bynkc/tests/fixtures/negative/241_indexed_unknown_key/src/shop/a.bynk
context shop.a

type R = {
  id: String,
  qty: Int,
}

agent A {
  key k: String
  store m: Map[String, R] @indexed(by: nope)

  on call howMany() -> Effect[Int] {
    let n <- m.size()
    Effect.pure(n)
  }
}
